add http and html blocks